sugang.khu.ac.kr에서만 동작하도록 설정 & 페이지 로드되면 바로 무효화하도록 설정

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,9 @@
 	"description": "Hello World!",
 	"permissions": [
 		"activeTab",
-		"tabs"
+		"tabs",
+		"http://*/",
+		"https://*/"
 	],
     "browser_action": {
     	"default_icon": "images/icon.png"
